# fiware-project

./: .gitignore  data_explorer.py  data_loader.py  main.py  model_trainer.py  pyproject.toml
device/: sensor_simulation.py
devices/: database_connector.py  excel_loader.py  sensor_simulation.py
model_trainer/: __init__.py
model_trainer/src/: model_creator.py
model_trainer/src/model/: __init__.py  data_explorer.py  data_loader.py  data_processor.py  data_splitter.py  model_trainer.py
router/: __init__.py  app.py  database_connector.py  predictor.py  web_socket.py
